lazylibrarian/lazylibrarian-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: lazylibrarian-service
  namespace: mediaserver
spec:
  selector:
    app: lazylibrarian
  ports:
  - protocol: TCP
    port: 5299
    targetPort: 5299
  type: NodePort
