lazylibrarian/calibre-web-ingress-external.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: calibre-web-external
  namespace: mediaserver
  labels:
    traffic-type: external
  annotations:
    traefik.frontend.rule.type: PathPrefix
    traefik.frontend.redirect.entryPoint: https
    traefik.frontend.redirect.regex: ^http://(.*)
    traefik.frontend.redirect.replacement: https://$1
    #ingress.kubernetes.io/auth-type: basic
    #ingress.kubernetes.io/auth-secret: ingress-auth
spec:
  rules:
  - host: books.cloud.anjokolk.com
    http:
      paths:
      - path: /
        backend:
          serviceName: calibre-web
          servicePort: 8083
  - host: books.cloud.oraperf.com
    http:
      paths:
      - path: /
        backend:
          serviceName: calibre-web
          servicePort: 8083
