lazylibrarian/lazylibrarian-ingress-internal.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: lazylibrarian
  namespace: mediaserver
  annotations:
    traefik.frontend.rule.type: PathPrefix
spec:
  rules:
  - host: librarian.internal.anjokolk.com
    http:
      paths:
      - path: /
        backend:
          serviceName: lazylibrarian-service
          servicePort: 5299
